@@ -1,3 +1,13 @@
+2016-01-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gpasm/directive.c, gpasm/gpasm.c, gpasm/gpasm.h.in,
+    gpasm/gperror.c, libgputils/gpprocessor.c, libgputils/gpprocessor.h:
+    Smarter message 302. The basis of a proposal from Petr Mikse.
+    (Patch: #65 Smarter message 302)
+
+  * libgputils/gparchive.c, libgputils/gpcfg.c,
+    libgputils/gpcoffgen.c, libgputils/gphash.c, libgputils/gphash.h:
+    Code cosmetic.
+
 2016-01-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/directive.c:
     Fixed "Warning[219] Invalid RAM location specified..." messages
